--- a/main.css
+++ b/main.css
@@ -25,7 +25,10 @@ body{
     border-radius: 10px;
     color: black;
 }
-
+.a-icon{
+    margin-right: 5px;
+    margin-left: 5px;
+}
 .div-cont{
     border-radius: 10px;
     padding-bottom: 10px;
@@ -36,7 +39,7 @@ body{
     width: 300px;
 }
 .div-img{
-    margin-top: 10px; 
+    margin-top: 0px; 
     /* include margin if needed! */
 }
 .home-header-name{
@@ -58,4 +61,9 @@ body{
 .about-p{
     text-align: justify;
     /* width: 400px; */
+}
+.home-education-head{
+    color: #4F2683;
+    font-size: 24px;
+    font-weight: bold;
 }
